refactor: Update README.md and package.json for improved links and icon replacement

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "publisher": "AcervoApps",
   "license": "MIT",
-  "icon": "resources/icon.png",
+  "icon": "resources/everhour.png",
   "keywords": [
     "vscode",
     "extension",
