feat: Implement task pinning functionality and enhance Timesheet UI
- Added ability to pin and unpin tasks in the Timesheet view, allowing users to prioritize important tasks.
- Updated TimesheetHtmlGenerator to include pin buttons for each task in the UI.
- Enhanced TimesheetMessageHandler to handle pin and unpin commands, updating the task state accordingly.
- Modified WeeklyTaskManager to manage pinned tasks and ensure only one task can be pinned at a time.
- Improved CSS styles for the pinned tasks bar and buttons for better user experience.

--- a/package.json
+++ b/package.json
@@ -35,18 +35,17 @@
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "everhour",
+          "id": "follow55-everhour",
           "title": "Everhour",
           "icon": "resources/everhour.svg"
         }
       ]
     },
     "views": {
-      "everhour": [
+      "follow55-everhour": [
         {
           "type": "webview",
-          "icon": "resources/everhour.svg",
-          "id": "everhour.timesheetView",
+          "id": "follow55-everhour.timesheetView",
           "name": "Tarefas"
         }
       ]
