feat: Update CHANGELOG and version to 1.1.0; add workspace linking functionality
- Enhanced CHANGELOG with new features, fixes, and improvements for version 1.1.0.
- Introduced a command to link the current workspace with an Everhour project, allowing for automatic project association and persistence across sessions.
- Improved project selection UI and token validation, enhancing overall user experience.
- Updated package.json to reflect the new version and added the new command to the extension.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "follow55-everhour-integration",
   "displayName": "Follow55 - Everhour integration",
   "description": "A extensão perfeita para devs que usam Everhour e querem registrar horas direto do VS Code com máximo foco e mínimo esforço.",
-  "version": "0.0.7",
+  "version": "1.1.0",
   "publisher": "AcervoApps",
   "license": "MIT",
   "icon": "resources/everhour.png",
@@ -30,6 +30,10 @@
       {
         "command": "follow55-everhour-integration.setToken",
         "title": "Configurar Token Everhour"
+      },
+      {
+        "command": "follow55-everhour-integration.linkProject",
+        "title": "Link Current Workspace to Everhour Project"
       }
     ],
     "viewsContainers": {
